# cpp-reflection

./: CMakeLists.txt  Field.h  LayoutIterator.h  LayoutView.h  Name.h  README.md  Reflection.cpp  Reflection.h
.github/workflows/: cmake-multi-platform.yml
Reflection/: Field.h  Layout.h  LayoutIterator.h  LayoutView.h
include/Core/: StaticString.h  Tuple.h  TupleVisitor.h
include/Reflection/: Field.h  Layout.h  LayoutIterator.h  LayoutView.h
